Bake image sizes into html to avoid element shifting on load

--- a/global.scss
+++ b/global.scss
@@ -132,7 +132,8 @@ main:not(.home) {
   margin-top: 10px;
 
   img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
   }
 }
 
