--- a/pages/voor-scholen/voor-scholen.module.scss
+++ b/pages/voor-scholen/voor-scholen.module.scss
@@ -3,10 +3,6 @@
   margin-top: 20px;
   columns: 2;
 
-  img {
-    width: 100%;
-  }
-
   :first-child {
     margin-top: 0;
   }
